--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,15 @@
-.App {
+body {
   text-align: center;
+  padding: none;
+  margin: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+ul {
+  margin-top: 0;
 }
 
-.App-header {
-  background-color: #282c34;
+.quotes-wrapper {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  min-width: 100vw;
+  background-size: cover; 
 }
