--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,34 @@
-body {
-  text-align: center;
-  padding: none;
-  margin: none;
-}
-
-ul {
-  margin-top: 0;
+h2, h3 {
+  color: white;
+  margin: 0;
 }
 
 .quotes-wrapper {
   min-height: 100vh;
   min-width: 100vw;
-  background-size: cover; 
+  background-size: cover;
+  display: grid;
+  grid-template-rows: 2fr 1fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  text-align: center;
+
+  /* background-image: no-repeat; */
+  /* background: rgba(255,255,255, 0.5) */
+
+}
+
+.quote-main {
+  grid-row: 2 / 3;
+  grid-column: 2 / 4;
+}
+
+.quote-author {
+  grid-row: 3 / 4;
+  grid-column: 2 / 4;
+}
+
+.quote-button {
+  grid-row: 4 / 5;
+  grid-column: 2 / 4;
+  /* background-color: white; */
 }
