Add README, tidy up App.js code and CSS styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-h2, h3 {
+h1, h2 {
   color: white;
   margin: 0;
 }
@@ -11,10 +11,8 @@ h2, h3 {
   grid-template-rows: 2fr 1fr 1fr 2fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
-
   /* background-image: no-repeat; */
   /* background: rgba(255,255,255, 0.5) */
-
 }
 
 .quote-main {
@@ -27,8 +25,21 @@ h2, h3 {
   grid-column: 2 / 4;
 }
 
-.quote-button {
+.quote-button-container {
   grid-row: 4 / 5;
   grid-column: 2 / 4;
-  /* background-color: white; */
+}
+
+.quote-button {
+  background-color: black;
+  color: white;
+  font-size: 1em;
+  border: none;
+  padding: 14px 40px;
+  text-decoration: none;
+}
+
+.quote-button:hover{
+  background-color: white;
+  color: black;
 }
